set email send to confirm email

--- a/app/views/pages/email_to_confirm.html.erb
+++ b/app/views/pages/email_to_confirm.html.erb
@@ -1,6 +1,6 @@
 <div class="flex flex-column justify-content-around">
   <h4 class="text-center  m-5">
-    Votre inscription sur la liste d'attente a bien été prise en compte.
+    Un email de confirmation vous a été envoyé : checkez votre boite mail.
   </h4>
   <div class="text-center">
       <%= link_to "Nouvelle inscription", new_request_path, class: "btn btn-primary" %>
