--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column justify-content-around m-5">
+<div class="m-5">
   <h3 class="text-center">Inscrivez vous sur la liste d'attente de notre fantastique espace de coworking</h3>
   <%= simple_form_for @request do |f|  %>
     <%= f.input :email %>
