--- a/app/views/request_mailer/request_to_reconfirm.html.erb
+++ b/app/views/request_mailer/request_to_reconfirm.html.erb
@@ -2,7 +2,9 @@
   <tr>
     <td>
       <p>Bonjour,</p>
+      <p>Vous êtes numéro <%= @position %>  sur liste d'attente.</p>
       <p>Trois mois se sont écoulés, êtes vous toujours intéressés pour rejoindre notre espace de coworking ?</p>
+
     </td>
   </tr>
   <tr>
