--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -2,8 +2,24 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <style>
-      /* Email styles need to be inline */
+    <%= stylesheet_link_tag 'mailer', media: 'all' %>
+    <style type="text/css">
+      @media all {
+        .btn a {
+          padding: 15px 50px !important;
+          border-radius: 50px !important;
+          font-family: sans-serif !important;
+          font-size: 20px !important;
+          font-weight: 600 !important;
+          line-height: inherit !important;
+          text-decoration: none !important;
+          border: 2px solid #bbb !important;
+          background-color: #027cf7 !important;
+        }
+        .btn a:hover {
+          background-color: #027cf7 !important;
+        }
+      }
     </style>
   </head>
 
